--- a/package.json
+++ b/package.json
@@ -63,11 +63,11 @@
     "clean-webpack-plugin": "^3.0.0",
     "clipboard": "^1.7.1",
     "color": "^3.1.3",
-    "compression-webpack-plugin": "^6.1.1",
+    "compression-webpack-plugin": "7.0.0",
     "core-js": "^3.2.1",
     "create-react-class": "^15.6.2",
     "crypto-js": "4.0.0",
-    "css-loader": "^2.0.1",
+    "css-loader": "^5.0.1",
     "diff": "4.0.2",
     "dompurify": "^2.2.6",
     "downsample": "1.3.0",
@@ -75,7 +75,7 @@
     "echarts-for-react": "2.0.16",
     "emotion": "10.0.27",
     "emotion-theming": "10.0.27",
-    "file-loader": "^3.0.1",
+    "file-loader": "^6.2.0",
     "focus-visible": "^5.0.2",
     "fork-ts-checker-webpack-plugin": "^4.1.2",
     "framer-motion": "^2.9.4",
@@ -86,16 +86,16 @@
     "jed": "^1.1.0",
     "jquery": "2.2.2",
     "js-cookie": "2.2.1",
-    "less": "^3.9.0",
-    "less-loader": "^4.1.0",
+    "less": "^3.12.2",
+    "less-loader": "^7.1.0",
     "lodash": "^4.17.19",
     "marked": "0.7.0",
-    "mini-css-extract-plugin": "^v0.5.0",
+    "mini-css-extract-plugin": "^1.3.2",
     "mobx": "^5.13.0",
     "mobx-react": "~5.4.4",
     "moment": "2.24.0",
     "moment-timezone": "0.5.28",
-    "optimize-css-assets-webpack-plugin": "^5.0.1",
+    "optimize-css-assets-webpack-plugin": "^5.0.4",
     "papaparse": "^5.2.0",
     "parseurl": "^1.3.2",
     "platformicons": "^4.1.2",
@@ -125,15 +125,15 @@
     "rrweb-player": "^0.4.6",
     "scroll-to-element": "^2.0.0",
     "sprintf-js": "1.0.3",
-    "style-loader": "^0.23.1",
-    "svg-sprite-loader": "^3.9.0",
+    "style-loader": "^2.0.0",
+    "svg-sprite-loader": "^5.1.1",
     "svgo": "^1.0.3",
     "svgo-loader": "^2.1.0",
     "typescript": "^4.0",
     "u2f-api": "1.0.10",
-    "webpack": "^4.44.2",
-    "webpack-cli": "3.3.11",
-    "webpack-fix-style-only-entries": "^0.2.0",
+    "webpack": "^5.10.0",
+    "webpack-cli": "4.2.0",
+    "webpack-fix-style-only-entries": "^0.6.0",
     "wink-jaro-distance": "^2.0.0",
     "zxcvbn": "^4.4.2"
   },
@@ -183,7 +183,7 @@
     "tsconfig-paths-webpack-plugin": "^3.2.0",
     "typescript-styled-plugin": "^0.15.0",
     "url-loader": "^4.1.0",
-    "webpack-dev-server": "3.11.2"
+    "webpack-dev-server": "^4.0.0-beta.0"
   },
   "optionalDependencies": {
     "fsevents": "^2.1.2"
