--- a/package.json
+++ b/package.json
@@ -86,11 +86,11 @@
     "jed": "^1.1.0",
     "jquery": "2.2.2",
     "js-cookie": "2.2.1",
-    "less": "^3.12.2",
-    "less-loader": "^7.1.0",
+    "less": "^4.1.1",
+    "less-loader": "^8.0.0",
     "lodash": "^4.17.19",
     "marked": "0.7.0",
-    "mini-css-extract-plugin": "^1.3.2",
+    "mini-css-extract-plugin": "^1.3.9",
     "mobx": "^5.13.0",
     "mobx-react": "~5.4.4",
     "moment": "2.24.0",
@@ -126,14 +126,14 @@
     "scroll-to-element": "^2.0.0",
     "sprintf-js": "1.0.3",
     "style-loader": "^2.0.0",
-    "svg-sprite-loader": "^5.1.1",
+    "svg-sprite-loader": "^5.2.1",
     "svgo": "^1.0.3",
-    "svgo-loader": "^2.1.0",
+    "svgo-loader": "^3.0.0",
     "typescript": "^4.0",
     "u2f-api": "1.0.10",
-    "webpack": "^5.10.0",
-    "webpack-cli": "4.2.0",
-    "webpack-fix-style-only-entries": "^0.6.0",
+    "webpack": "^5.24.4",
+    "webpack-cli": "4.5.0",
+    "webpack-remove-empty-scripts": "^0.7.1",
     "wink-jaro-distance": "^2.0.0",
     "zxcvbn": "^4.4.2"
   },
@@ -161,7 +161,7 @@
     "eslint": "5.11.1",
     "eslint-config-sentry-app": "1.50.0",
     "eslint-plugin-simple-import-sort": "^6.0.0",
-    "html-webpack-plugin": "^4.3.0",
+    "html-webpack-plugin": "^5.3.1",
     "jest": "26.6.3",
     "jest-canvas-mock": "^2.3.0",
     "jest-circus": "26.6.3",
@@ -183,7 +183,7 @@
     "tsconfig-paths-webpack-plugin": "^3.2.0",
     "typescript-styled-plugin": "^0.15.0",
     "url-loader": "^4.1.0",
-    "webpack-dev-server": "^4.0.0-beta.0"
+    "webpack-dev-server": "^3.11.2"
   },
   "optionalDependencies": {
     "fsevents": "^2.1.2"
@@ -202,7 +202,7 @@
     "lint": "yarn eslint tests/js src/sentry/static/sentry/app --ext .js,.jsx,.ts,.tsx",
     "lint:css": "yarn stylelint 'src/sentry/static/sentry/app/**/*.[jt]sx'",
     "dev": "(yarn check --verify-tree || yarn install --check-files) && sentry devserver",
-    "dev-ui": "SENTRY_UI_DEV_ONLY=1 SENTRY_WEBPACK_PROXY_PORT=7999 yarn webpack-dev-server",
+    "dev-ui": "SENTRY_UI_DEV_ONLY=1 SENTRY_WEBPACK_PROXY_PORT=7999 yarn webpack serve",
     "dev-acceptance": "NO_DEV_SERVER=1 NODE_ENV=development yarn webpack --watch",
     "storybook": "SENTRY_UI_HOT_RELOAD='' start-storybook -p 9001 -c .storybook",
     "storybook-build": "build-storybook -c .storybook -o docs-ui/.storybook-out --quiet",
@@ -212,7 +212,7 @@
     "watch-api-docs": "sane 'yarn build-derefed-docs' api-docs",
     "build-css": "NODE_ENV=production yarn webpack --config=config/webpack.css.config.js",
     "build-acceptance": "yarn build-production",
-    "build-production": "NODE_ENV=production yarn webpack --mode production --display errors-only",
+    "build-production": "NODE_ENV=production yarn webpack --mode production",
     "build": "yarn build-production --output-path=public",
     "validate-api-examples": "yarn install-api-docs && cd api-docs && yarn openapi-examples-validator ./openapi.json --no-additional-properties"
   },
